[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "Sangam backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
anyhow = "1.0.60"
base64 = "0.21.5"
env_logger = "0.10.1"
jsonwebtoken= "9.2.0"
log = "0.4.0"
reqwest = { version = "0.11.11", features = ["json"]}
oauth2 = { version = "4" }
serde = "1.0.140"
serde_json = "1.0.82"
sqlx = { version = "0.7.2", features = ["postgres", "macros", "chrono", "runtime-tokio"] }
types = { path= "../types"}