[package]
name = "yew-ui"
version = "1.4.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
types = { path= "../types"}
const_format="0.2.25"
lazy_static = "1.4.0"
gloo-console = "0.3.0"
gloo-utils = "0.2.0"
yew-router = "0.18"
web-sys = { version = "0.3.58", features = ["HtmlDocument"] }
